--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   {% for movie in movies %}
       <div class="card" >
         <div class="front" style="background-image: url('{{ movie.img_url }}');">
-            <p class="large">1</p>
+            <p class="large">{{ movie.ranking }}</p>
         </div>
         <div class="back">
           <div>
@@ -27,7 +27,7 @@
                 <label>{{ movie.rating }}</label>
               <i class="fas fa-star star"></i>
             </div>
-              <p class="review">{{ movie.review }}</p>
+              <p class="review">"{{ movie.review }}"</p>
             <p class="overview">
                 {{ movie.description }}
             </p>
